feat:选中模型高亮，并弹窗显示信息。切换glb,ply等可以切换选择

--- a/src/ui/scss/menu-panel.scss
+++ b/src/ui/scss/menu-panel.scss
@@ -2,6 +2,7 @@
 
 .menu-panel {
     position: absolute;
+    z-index: 2000; // 确保菜单面板在所有其他面板之上
 
     &::not(.pcui-hidden) {
         display: flex;
