--- a/src/ui/scss/style.scss
+++ b/src/ui/scss/style.scss
@@ -4,6 +4,7 @@
 @use 'panel.scss';
 @use 'menu-panel.scss';
 @use 'menu.scss';
+@use 'context-menu.scss';
 @use 'scene-panel.scss';
 @use 'view-panel.scss';
 @use 'color-panel.scss';
