--- a/src/ui/scss/style.scss
+++ b/src/ui/scss/style.scss
@@ -9,6 +9,7 @@
 @use 'view-panel.scss';
 @use 'color-panel.scss';
 @use 'splat-list.scss';
+@use 'snapshot-view.scss';
 @use 'transform.scss';
 @use 'bottom-toolbar.scss';
 @use 'right-toolbar.scss';
