feat：所有模型对象均克控制是否可以被选中

--- a/src/ui/scss/splat-list.scss
+++ b/src/ui/scss/splat-list.scss
@@ -132,6 +132,24 @@
             }
         }
 
+        .splat-item-selectable {
+            flex-grow: 0;
+            flex-shrink: 0;
+
+            padding: 4px;
+            width: 16px;
+            height: 16px;
+            line-height: 16px;
+
+            color: $text-secondary;
+
+            cursor: pointer;
+
+            &:hover {
+                color: $text-primary;
+            }
+        }
+
         .splat-item-delete {
             flex-grow: 0;
             flex-shrink: 0;
