fix：调整属性面板位置

--- a/src/ui/scss/properties-panel.scss
+++ b/src/ui/scss/properties-panel.scss
@@ -2,8 +2,8 @@
 
 #properties-panel {
     position: absolute;
-    top: 390px;
-    left: 0px;
+    top: 0px;
+    right: 180px;
     width: 320px;
     z-index: 100;
 }
